# syb-with-class

./: .travis.yml  syb-with-class.cabal
.github/workflows/: haskell-ci.yml
Data/Generics/SYB/WithClass/: Basics.hs  Context.hs  Derive.hs  Instances.hs
tests/: Test.hs
