Name:               syb-with-class
Version:            0.6.1.15
License:            BSD3
License-file:       LICENSE
Copyright:          2004 - 2008 The University of Glasgow, CWI,
                                Simon Peyton Jones, Ralf Laemmel,
                                Ulf Norell, Sean Seefried, Simon D. Foster,
                                HAppS LLC
                    2009 Andrea Vezzosi
Author:             Simon Peyton Jones, Ralf Laemmel
Maintainer:         sanzhiyan@gmail.com
Stability:          experimental
Synopsis:           Scrap Your Boilerplate With Class
Description:
    Classes, and Template Haskell code to generate instances, for the
    Scrap Your Boilerplate With Class system.
Category:           Data
Tested-With:        GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.2, GHC == 9.8.4, GHC == 9.10.1, GHC == 9.12.1
Build-Type:         Simple
Cabal-Version:      >= 1.10

source-repository head
  type:     git
  location: https://github.com/Happstack/syb-with-class

Library
    Default-Language: Haskell2010
    Build-Depends:      base >= 3 && < 5, template-haskell >= 2.4 && < 2.30, bytestring, array, containers
    Exposed-modules:
        Data.Generics.SYB.WithClass.Basics
        Data.Generics.SYB.WithClass.Context
        Data.Generics.SYB.WithClass.Derive
        Data.Generics.SYB.WithClass.Instances

    Default-Extensions: UndecidableInstances, OverlappingInstances, Rank2Types,
            EmptyDataDecls, TemplateHaskell, FlexibleInstances, CPP,
            KindSignatures, MultiParamTypeClasses

    GHC-Options: -Wall

test-suite syb-with-class-test
    Default-Language: Haskell2010
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests
    GHC-Options: -Wall
    Main-Is: Test.hs
    Build-Depends: base, HUnit, syb-with-class
    Default-Extensions: OverlappingInstances
